--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,3 +66,49 @@ header .inner .gnb li:hover {
   background: #555;
   color: #fff;
 }
+
+/* figure */
+
+figure {
+  width: 100%;
+  height: calc(100vh - 120px);
+  background: #000;
+  position: relative;
+  overflow: hidden;
+  padding-top: 250px;
+}
+
+figure .inner {
+  width: 1180px;
+  margin: 0px auto;
+  position: relative;
+}
+
+figure .inner h1 {
+  font: normal 120px/1 "arial";
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+figure .inner p {
+  font: 16px/1.4 "arial";
+  color: #888;
+  margin-bottom: 60px;
+}
+
+figure .detail {
+  display: block;
+  width: 400px;
+  height: 30px;
+  border: 1px solid #bbb;
+  font: bold 11px/30px "arial";
+  color: #fff;
+  text-align: center;
+  letter-spacing: 1px;
+  transition: all 0.5s;
+}
+
+figure .detail:hover {
+  background: #fff;
+  color: #555;
+}
