--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,7 @@ header .inner h1 {
   bottom: 15px;
   font: bold 24px/1 "arial";
   color: #444;
+  font-size: 32px;
 }
 
 header .inner .util {
@@ -118,7 +119,7 @@ figure .detail:hover {
 
 section {
   width: 100%;
-  padding: 200px 0px;
+  padding: 100px 0px;
 }
 
 section .inner {
@@ -166,7 +167,7 @@ section .inner .wrap article p {
 
 section .inner .wrap article .pic {
   width: 100%;
-  height: 120px;
+  height: 250px;
   background: #333;
   margin-bottom: 15px;
   position: relative;
